Added Background music

--- a/main.html
+++ b/main.html
@@ -1,10 +1,13 @@
 <html>
   <head>
-    <script src="p5.js"></script>
-    <script src="game.js"></script>
-    <script src="ball.js"></script>
-    <script src="obstacle.js"></script>
+    <script src="Javascript Resources/p5.js"></script>
+    <script src="Javascript Resources/game.js"></script>
+    <script src="Javascript Resources/ball.js"></script>
+    <script src="Javascript Resources/obstacle.js"></script>
   </head>
   <body>
+  	<audio autoplay loop>
+    		<source src="Audio/Electro Cabello.mp3" type="audio/mpeg" />
+	</audio>
   </body>
 </html>
